--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --no-cache --verbose",
     "start": "node src/server/server.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open"
