--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "core-js": "^2.6.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
