--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-geonames-client": "0.0.2",
+    "regenerator-runtime": "^0.13.5",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
